# falco-prometheus-stack

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
falco/: custom_rules.yaml  falco.yaml
falco/rules/: deploy.sh
frontend/: package-lock.json  package.json
frontend/public/data-sources/: clients.json  history.json
frontend/src/: menuAside.js  menuNavBar.js
frontend/src/components/: FooterBar.vue
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue  LoginView.vue
hanabi/models/: branch_handlers.py  embedding.py  event_parser.py  example.json  hbt.py  hbt_builder.py  tree_node.py
hanabi/utils/: queue.py  timeCount.py
prometheus/: deploy.sh  exporter.py  prometheus.yml
prometheus/data/chunks_head/: 000001
prometheus/data/wal/: 00000000
