[project]
name = "falco-prometheus-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.2",
    "prometheus-client>=0.23.1",
    "waitress>=3.0.2",
    "rich>=13.9.4",
    "sentence-transformers>=5.1.2",
    "flagembedding>=1.3.5",
]
